SERVER-39118 Add comment to explain why mongos pass 'hasWriteConcernError=false' to getErrorLabels